# automata-builder

./: .gitignore  automata.py  data.py  graphics.py  installer.py  lang.py  main.py  pyproject.toml  readme.md  requirements.txt  ruff.toml  t.tex  t.txt  tab.py  tools.py
automata_builder/: __main__.py
automata_builder/core/: automata.py  calculate.py  compute.py  data.py  lang.py  parser.py  window.py
automata_builder/core/graphics/: items.py  view.py
automata_builder/core/tab/: components.py  tab.py
automata_builder/core/utiles/: utiles.py  widgets.py
automata_builder/locale/: en.yaml
automata_builder/resources/styles/: basic.qss  custom.qss
automata_builder/styles/: custom.qss
automata_builder/ui/: __init__.py  common.py  window.py
automata_builder/ui/graphics/: items.py  view.py
automata_builder/ui/tab/: __init__.py  common.py  components.py  tab.py  tab_components.py
automata_builder/ui/tab/graphics/: items.py  view.py
automata_builder/utiles/: data.py  lang.py  utiles.py
locale/: ru.yaml
src/: automata.py  data.py  lang.py  main.py  utiles.py  widgets.py  window.py
src/graphics/: items.py  view.py
src/tab/: components.py  tab.py
styles/: custom.qss  styles.qss
tools/: utiles.py  widgets.py
